--- a/src/styles/night/Experience.module.css
+++ b/src/styles/night/Experience.module.css
@@ -98,16 +98,21 @@
 .dotContainer,
 .dotContainer2 {
     display: flex;
-    gap: 2%;
     justify-content: center;
-    margin-top: 2%;
+    gap: 5%;
+    margin: 4% 0 3% 0;
 }
 
 .dotContainer2 {
-    margin-bottom: 27%;
+    margin: 0 0 27% 0;
 }
 
 @media only screen and (min-width: 1366px) {
+    .dotContainer {
+        gap: 2%;
+        margin: 2% 0 0 0;
+    }
+    
     .dotContainer2 {
         display: none;
     }
@@ -197,7 +202,6 @@
         margin-bottom: 0%;
     }
 }
-
 
 .title > h4 + p {
     color: var(--night-special-color);
@@ -391,11 +395,12 @@
 
 .addOnGrid {
     display: grid;
-    grid: 95% 5% /
-          95% 5%;
+    grid: 80% 20% /
+          70% 30%;
     grid-template-areas:
-        "addOnDesc     .    "
+        "addOnDesc addOnDesc"
         "    .     collapser";
+    row-gap: 13%;
 }
 
 @media only screen and (min-width: 1366px) {
@@ -420,8 +425,13 @@
 ––––––––––––––––––––––––––––––––––––––––––––––––––*/
 .collapseContainer {
     grid-area: collapser;
-    margin-top: 5%;
     color: var(--night-special-color);
+}
+
+@media only screen and (min-width: 1366px) {
+    .collapseContainer {
+        margin-top: 5%;
+    }
 }
 
 .collapser {
@@ -492,6 +502,7 @@
         height: 2px;
     }
 }
+
 
 /* SVG Motif
 ––––––––––––––––––––––––––––––––––––––––––––––––––*/
